--- a/style.css
+++ b/style.css
@@ -387,3 +387,34 @@ footer {
         grid-template-columns: 1fr;
     }
 }
+form {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    font-size: 15px;
+    font-family: 'Times New Roman', Times, serif;
+   
+}
+input {
+    padding: 4px 3px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1rem;
+    width: 100%;
+}
+button {
+    background-color: blue;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+button:hover {
+    background-color: darkblue;
+}
+button:active {
+    background-color: navy;
+}
